fix: invisible popup menu

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -17,6 +17,7 @@ button {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  width: 500px;
 }
 .list .list-content {
   overflow: auto;
